--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@
   --gradient-vddblue: hsl(237, 23%, 32%);
 
   --ff-body: 'Ubuntu', sans-serif;
-  --ff-menu: 'Overpass', sans-serif;
+  --ff-header: 'Overpass', sans-serif;
 }
 
 html {
@@ -24,7 +24,27 @@ html {
 }
 
 body {
+  font-family: var(--ff-body);
+  font-size: 1rem;
   margin: 0;
   min-height: 100vh;
   padding: 0;
+}
+
+h1, h2, h3 {
+  font-family: var(--ff-header);
+}
+
+h1 {
+  font-size: 3rem;
+}
+
+h2 {
+  color: var(--heading-drkblue);
+  font-size: 1.75rem;
+}
+
+h3 {
+  color: var(--heading-drkblue);
+  font-size: 1.25rem;
 }
