--- a/styles.css
+++ b/styles.css
@@ -11,8 +11,8 @@
   --gradient-vdgreyblue: hsl(237, 17%, 21%);
   --gradient-vddblue: hsl(237, 23%, 32%);
 
-  --ff-body: 'Ubuntu', sans-serif;
-  --ff-header: 'Overpass', sans-serif;
+  --ff-footer: 'Ubuntu', sans-serif;
+  --ff-body: 'Overpass', sans-serif;
 }
 
 html {
@@ -26,17 +26,15 @@ html {
 body {
   font-family: var(--ff-body);
   font-size: 1rem;
+  font-weight: 300;
   margin: 0;
   min-height: 100vh;
   padding: 0;
 }
 
-h1, h2, h3 {
-  font-family: var(--ff-header);
-}
-
 h1 {
-  font-size: 3rem;
+  font-size: 2.25rem;
+  font-weight: 400;
 }
 
 h2 {
@@ -59,11 +57,29 @@ h3 {
   font-weight: 500;
 }
 
+h4 {
+  font-weight: 300;
+  margin: 0;
+}
+
 .home-top {
   background-image: linear-gradient(225deg, var(--gradient-lred), var(--gradient-vlred));
   border-bottom-left-radius: 82px;
   color: var(--text-wht);
   padding-bottom: 6em;
+}
+
+a {
+  text-decoration-line: none;
+  font-weight: 100;
+}
+
+ul {
+  padding: 0;
+}
+
+ul li {
+  list-style-type: none;
 }
 
 .sec-2 {
@@ -77,4 +93,49 @@ h3 {
 .footer {
   background-color: var(--footer-bckg);
   border-top-right-radius: 90px;
+  font-family: var(--ff-footer);
+}
+
+.footer img {
+  display: block;
+  margin: 0 auto;
+  padding: 5rem 0 4.75rem;
+}
+
+.menu {
+  /* border: 2px solid white; */
+  margin: 0 auto;
+  text-align: center;
+}
+
+.footer a {
+  color: var(--footer-text);
+  font-size: 1rem;
+}
+
+.footer-categories {
+  color: var(--text-wht);
+}
+
+.footer-category-1, .footer-category-2 {
+  margin-bottom: 3em;
+}
+
+.footer-category-3 {
+  margin-bottom: 2.5em;
+}
+
+.footer ul li {
+  margin-bottom: 1em;
+}
+
+.attribution {
+  color: whitesmoke;
+  font-size: .75rem;
+  padding: 1em;
+  text-align: center;
+}
+
+.attribution a {
+  font-size: .75rem;
 }
