--- a/styles.css
+++ b/styles.css
@@ -26,11 +26,14 @@ html {
 }
 
 body {
+  color: var(--v-drk-grey-blue);
   font-family: var(--ff-overpass);
   font-size: 1rem;
-  font-weight: 300;
+  font-weight: 100;
+  line-height: 1.75;
   margin: 0;
   min-height: 100vh;
+  text-align: center;
   padding: 0;
 }
 
@@ -56,7 +59,7 @@ h2 {
 h3 {
   color: var(--v-drk-blue);
   font-size: 1.5rem;
-  font-weight: 500;
+  font-weight: 400;
 }
 
 h4 {
@@ -80,14 +83,14 @@ h4 {
 
 .menu {
   box-shadow: 0 17px 21px -16px grey;
-  display: none;
   position: absolute;
   right: 27px;
+  visibility: hidden;
   width: 85%;
 }
 
 .menu.show {
-  display: initial;
+  visibility: initial;
 }
 
 .btn-container {
@@ -231,6 +234,7 @@ ul li {
 .hero-banner {
   align-items: center;
   display: flex;
+  justify-content: center;
   min-height: 65vh;
 }
 
@@ -257,8 +261,8 @@ ul li {
 
 .sec-2 {
   background-image: linear-gradient(var(--v-d-grey-blue), var(--v-d-d-blue));
-  border-bottom-left-radius: 80px;
-  border-top-right-radius: 90px;
+  border-bottom-left-radius: 100px;
+  border-top-right-radius: 95px;
   color: var(--white);
   margin-bottom: 4em;
   padding-bottom: 6em;
