--- a/styles.css
+++ b/styles.css
@@ -128,6 +128,10 @@ h4 {
   position: relative;
 }
 
+.nav-item-sublist a:hover {
+  text-decoration: underline;
+}
+
 .nav-item-sublist::after {
   background-image: url(images/icon-arrow-dark.svg);
   background-repeat: no-repeat;
@@ -166,10 +170,6 @@ h4 {
   padding: .5em 0;
 }
 
-.sublist a {
-  opacity: .7;
-}
-
 .sublist.show {
   display: flex;
   flex-direction: column;
@@ -196,11 +196,47 @@ ul li {
   padding: .75em 1em;
 }
 
+#login-btn {
+  background-color: transparent;
+  border: none;
+  color: var(--v-drk-blue);
+  display: block;
+  font-family: var(--ff-overpass);
+  font-size: 1.25rem;
+  font-weight: 400;
+}
+
+#login-btn:hover {
+  opacity: .8;
+  text-decoration: underline;
+}
+
+#sign-btn {
+  background-image: linear-gradient(90deg, var(--v-l-red), var(--l-red));
+  border: none;
+  color: var(--white);
+  display: block;
+  margin: 0 auto;
+  padding: 1em 3em;
+}
+
+#sign-btn:hover {
+  background-color: var(--v-light-red);
+  color: var(--white);
+  cursor: pointer;
+}
+
 #start-btn {
   background-color: var(--white);
   border: none;
   color: var(--light-red);
   margin-right: 1em;
+}
+
+#start-btn:hover {
+  background-color: var(--v-light-red);
+  color: var(--white);
+  cursor: pointer;
 }
 
 #learn-btn {
@@ -211,24 +247,10 @@ ul li {
   padding-right:  1.5em;
 }
 
-#login-btn {
-  background-color: transparent;
-  border: none;
-  color: var(--v-drk-blue);
-  display: block;
-  font-family: var(--ff-overpass);
-  font-size: 1.25rem;
-  font-weight: 400;
-  margin: 1em auto;
-}
-
-#sign-btn {
-  background-image: linear-gradient(90deg, var(--v-l-red), var(--l-red));
-  border: none;
-  color: var(--white);
-  display: block;
-  margin: 0 auto;
-  padding: 1em 3em;
+#learn-btn:hover {
+  background-color: var(--white);
+  color: var(--v-light-red);
+  cursor: pointer;
 }
 
 .hero-banner {
@@ -318,6 +340,11 @@ ul li {
 .footer a {
   color: var(--grey-blue);
   font-size: 1rem;
+}
+
+.footer a:hover {
+  cursor: pointer;
+  text-decoration: underline;
 }
 
 .footer-categories {
